# mae_bind

./: Makefile  README.md  perf.py  pyproject.toml
mae/: __init__.py
mae/python/: bindings.cpp
mae/src/: mae.cpp  mae.hpp
